force-app/main/default/objects/Project_Task__c/fields/project__c.field-meta.xml
<CustomField>
    <fullName>project__c</fullName>
    <label>project</label>
    <referenceTo>project__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>