force-app/main/default/objects/Project_Task__c/fields/Task_Age__c.field-meta.xml
<CustomField>
    <fullName>Task_Age__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>