force-app/main/default/objects/Project_Task__c/validationRules/Due_Date_In_Past_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_In_Past_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Due_Date__c &lt; TODAY(), NOT(Bypass_Flow__c))</errorConditionFormula>
    <errorMessage>Due Date cannot be in the past</errorMessage>
</ValidationRule>