force-app/main/default/objects/Project_Task__c/listViews/All_Task_details.listView-meta.xml
<ListView>
    <fullName>All_Task_details</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Task details</label>
</ListView>