force-app/main/default/objects/Project_Task__c/listViews/overdue_tasks.listView-meta.xml
<ListView>
    <fullName>overdue_tasks</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>overdue tasks</label>
</ListView>