force-app/main/default/objects/Project_Task__c/listViews/Tasks_Due_This_Week.listView-meta.xml
<ListView>
    <fullName>Tasks_Due_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <label>Tasks Due This Week</label>
</ListView>